# interview

./: .#error_handling_without_exceptions.md  RAII.md  Sliding Window Technique_ A Comprehensive Guide - LeetCode Discuss.html  allocators.md  any.md  atomic_and_lock_free.md  big-O-notation.md  boost_python.md  cache_alignment.md  cast.md  circular_buffer.md  coderpad_interactive.md  const.md  constexpr.md  constructor.md  copy.md  dsl.md  error_handling_without_exceptions.md  fibonacci.md  floating-point.md  formatter.md  hashtable.md  iterators.md  lambda.md  latency_throughput.md  linked_lists.md  lock_free_queue.md  lru.md  lru_orderbook.cpp  machine_learning.md  macros.md  market_data_feed.md  matching_engine.cpp  modules.md  move_semantics.md  mysyllabus.md  mysyllabus_refesh_interview_preparation.md  operator_overloading.md  optional.md  orderbook.cpp  (+29 more)
Sliding Window Technique_ A Comprehensive Guide - LeetCode Discuss_files/: anchor.html  cn.js  common-libs.160eaba00.js  desktop.879e4e0bb.js  enterprise(1).js  enterprise.js  gio.js  global.78e54acc0.js  index.5efbdae28.js  index.85663ac65.js  js  lEEM4ZLDLFuvATVvcnxglI8CLvLrSc6BLt7Ue_ua1SM.js  new-libs.3a42307d0.js  saved_resource  saved_resource(1).html
actual_interview/: 50_messages_per_seconds.cpp  TimedTaskProcessor  TimedTaskProcessor.cpp  TimesTaskProcessor  a.out  intervew_jpmorgan.md  j_p_morgan_india.md  test  test.cpp
actual_interview/eclipse_hongkong/: InstrumentQuoter.hpp  InstrumentQuoter.hpp.old  QuoteAlgoChatGPT.cpp  QuoteAlgoCopilot.cpp  QuoteAlgorithmDeepSeek  QuoteAlgorithmDeepSeek.cpp  Solution.cpp  eclipse_hongkong.md  tests  tests.cpp
actual_interview/eclipse_hongkong/final/: InstrumentQuoter  InstrumentQuoter.cpp
actual_interview/eclipse_hongkong/final/submission/: InstrumentQuoter.cpp
actual_interview/volant/: bike_ride_hydration_problem.md  style.css
average_price/: .#average_price.cpp
behavorial/: difficult_tasks_handled.md  management.md  tell_me_about_yourself.md
build_system/: dependency_management.md  ninja_vs_make.md
cache/: Cache.md  CacheOptimizingTechniques.md  article.md  cache_loading_prefetching_aligning_example.md  cache_obvious_algorithms.md  multi-core_and_cache.md  request.md
cache/articles/: .#multicore_cache.md  MultiCodeArchitectureAndCache.md  MultiCoreArchitectureAndCacheOptimization.md  false_sharing.md  false_sharing_explanation.md  false_sharing_scenario1.md  false_sharing_scenario2.md  false_sharing_work_in_progress.md  final.md  multicore_cache.md  prefetching.md  prefetching3.md  prefetching_final.md  prefetching_linkedin.md  work_in_progress.md
cache/articles/multicore_cache_optimization/: adjacent_thread_local_variables_and_false_sharing.md  adjacent_variables_and_false_sharing.md  partitioned_array_processing_and_false_sharing.md
cache/benchmark/: CMakeLists.txt  aligned_data.cpp  allignement.asm  arranged_data.cpp  benchmark.cpp  benchmark.h  benchmark_aligned_data.cpp  buffering.asm  code.cpp  cpu_turbo.sh  default.cpp  marketDataProcessingBenchmarks.cpp  marketDataProcessingBenchmarks.md  marketDataProcessingBenchmarks2.md  marketDataProcessingBenchmarks3.cpp  marketDataProcessingBenchmarks3.md  prefetching.asm  unrolling_loop.cpp
cache/benchmark/CustomContinousAllocator/: contigous_allocator.cpp
cache/benchmark/prefetch/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  manage_turbo_and_perf.sh  prefetch_benchmark.cpp  prefetch_benchmark.h  run_perf.sh  with_prefetching.cpp  with_prefetching_improved.cpp  with_prefetching_in_batch.cpp  with_prefetching_in_batch_improved_copying.cpp  with_prefetching_in_batch_multiple.cpp  without_prefetching.cpp
custom_allocators/: a.out  simple_allocator.cpp
datastructure/: deque.md  flat_hashmap.md  hashtable  hashtable.cpp  hashtable.md
finance/: .#twap.md  ATPlatformAndPhythonStrategyInterface.md  Strategy_Parameters_Calibration_and_Boost_Python_Integration.md  analytics.md  average_price.html  average_price.md  design_strategy_engine.md  orderbook.md  pricing_module.puml  rule_engine_algo_trader_example.md  techniques_in_trading.md  twap.md  types_of_strategies.md  vwap.md
git/: branching_models.md  rebase_vs_merge.md
lru/: CMakeLists.txt  lru.md  lru_dq.cpp  lru_linked_list.cpp  lru_orderbook  lru_orderbook.cpp
managerial/: managerial_questions.md
matching_engine/: .#CMakeLists.txt  .#matching_engine.md  CMakeLists.txt  constraints.h  design_document.md  main.cpp  matching_engine.cpp  matching_engine.md  orderbook.md  utils.h
matching_engine/orderbook/: .#orderbook.h  errorinfo.h  operations.cppm  order.cpp  orderbook.cpp  orderbook.cppm  orderbook.h  orderbookhandler.cpp  orderbookhandler.h  ordermetadata.cpp  pricelevel.cpp  pricelevel.cppm  pricelevels.cpp
memory/: byte_ordering.md  memory_aliasing_and_alignment.md  memory_operation_ordering.md
practice/: CMakeLists.txt  alignas  alignas.cpp  btree.cpp  linked_list  linked_list.cpp
problem_solving/: array_and_strings.md  linked_lists.md  stack_and_queue.md  tree_and_graph.md
questions/: general_c++_questions.md  ib_programming_questions.md  j_p_morgan.md  written_questions.md
questions/problem_solving/: derangement_problem.md
resume_questions/: signal_generation_module_design.md  signal_handler.md
rust/: rust_Box_vs_c++_unique_ptr.md  rust_arc_vs_shared_ptr.md  rust_memory_model.md  rust_pointers_and_references.md  rust_refcell.md
tasks/: .#largest_subgroup.cpp  atoi.md  flatten_array.md  kth_largest_element.md  largest_subgroup.cpp  middle_element_of_linked_list.md  palindrome.md  reverse_linked_list.md  sliding_window_techniques.md  triplet_counting.md
tasks/matching_engine/: logger.h  spdlog.cmake
tasks/matching_engine/orderbook/: TODO.md  check.cpp  debug.cpp  orderbook.cpp  orderbooks.cpp  pricelevel.cpp  pricelevels.cpp
volant/: bike_ride_hydration_problem.html  copyable.md  move_semantics.md  tcp.md  virtual-over-generic.html  virtual-over-generic.md  virtual.md  volant-interview_1.md
volant/average_price/: CMakeLists.txt  average_price.cpp
(+2 files in other folders)
